release: prepare VeritasMed v0.1.0 showcase
